Fix for gap after van photo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -332,6 +332,10 @@ main>section p:last-child {
     border-radius: 18px;
 }
 
+.portrait.wide {
+    margin: 16px 0 16px;
+}
+
 .project-header {
     display: flex;
     align-items: center;
